--- a/details-page.html
+++ b/details-page.html
@@ -27,7 +27,7 @@
     <!-- Start header  -->
     <header>
         <div class="container d-flex justify-content-between align-items-center">
-            <h2 class="fw-bolder">Where in the world?</h2>
+            <h2 class="fw-bolder"><a href="" onclick="window.history.back()" stye="color: black; text-decoration: none">Where in the world?</a></h2>
             <div class="theme-switcher p-2">
                 <i class="far fa-light fa-moon"></i>
                 <span class="fw-bold ms-1">Dark Mode</span>
